--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@chakra-ui/react": "^2.7.0",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@types/mongoose": "^5.11.97",
         "@types/node": "20.2.5",
         "@types/react": "18.2.9",
         "@types/react-dom": "18.2.4",
@@ -32,6 +33,7 @@
         "eslint-config-next": "13.4.4",
         "framer-motion": "^10.12.16",
         "husky": "^8.0.3",
+        "mongoose": "^7.2.3",
         "next": "13.4.4",
         "next-sitemap": "^4.1.3",
         "postcss": "8.4.24",
