--- a/package.json
+++ b/package.json
@@ -19,27 +19,30 @@
         ]
     },
     "dependencies": {
-        "@chakra-ui/next-js": "^2.1.4",
-        "@chakra-ui/react": "^2.7.0",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
-        "@types/mongoose": "^5.11.97",
+        "@nextui-org/react": "^1.0.0-beta.13",
         "@types/node": "20.2.5",
         "@types/react": "18.2.9",
         "@types/react-dom": "18.2.4",
         "autoprefixer": "10.4.14",
+        "axios": "^1.4.0",
         "cross-env": "^7.0.3",
         "eslint": "8.42.0",
         "eslint-config-next": "13.4.4",
         "framer-motion": "^10.12.16",
         "husky": "^8.0.3",
+        "jsonwebtoken": "^9.0.0",
+        "lottie-react": "^2.4.0",
         "mongoose": "^7.2.3",
         "next": "13.4.4",
+        "next-auth": "^4.22.1",
         "next-sitemap": "^4.1.3",
         "postcss": "8.4.24",
         "prettier": "^2.8.8",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-icons": "^4.9.0",
         "tailwindcss": "3.3.2",
         "typescript": "5.1.3"
     }
