--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
         "autoprefixer": "10.4.14",
         "axios": "^1.4.0",
         "cross-env": "^7.0.3",
+        "dotenv": "^16.3.1",
         "eslint": "8.42.0",
         "eslint-config-next": "13.4.4",
         "framer-motion": "^10.12.16",
         "husky": "^8.0.3",
         "jsonwebtoken": "^9.0.0",
         "lottie-react": "^2.4.0",
+        "mapbox-gl": "^2.15.0",
         "mongoose": "^7.2.3",
         "next": "13.4.4",
         "next-auth": "^4.22.1",
@@ -44,6 +46,10 @@
         "react-dom": "18.2.0",
         "react-icons": "^4.9.0",
         "tailwindcss": "3.3.2",
-        "typescript": "5.1.3"
+        "typescript": "5.1.3",
+        "webpack": "^5.87.0"
+    },
+    "devDependencies": {
+        "@types/mapbox-gl": "^2.7.11"
     }
 }
