--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ kiwisolver==1.4.4
 libclang==16.0.0
 Markdown==3.4.3
 MarkupSafe==2.1.2
+motor==3.2.0
 nest-asyncio==1.5.6
 packaging==23.1
 parso==0.8.3
