--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "weride",
+    "name": "fleetology",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -47,7 +47,8 @@
         "react-icons": "^4.9.0",
         "tailwindcss": "3.3.2",
         "typescript": "5.1.3",
-        "webpack": "^5.87.0"
+        "webpack": "^5.87.0",
+        "yarn": "^1.22.19"
     },
     "devDependencies": {
         "@types/mapbox-gl": "^2.7.11"
