--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,10 @@
         "error",
         {
           "groups": ["builtin", "external", "internal", "parent", "sibling", "index"],
-          "newlines-between": "always"
+          "newlines-between": "always",
+          "alphabetize": {
+            "caseInsensitive": true
+          }
         }
       ]
     }
