--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
         "prettier": "^2.8.8",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-icons": "^4.9.0",
+        "react-icons": "^4.10.1",
         "tailwindcss": "3.3.2",
         "typescript": "5.1.3",
+        "uuid": "^9.0.0",
         "webpack": "^5.87.0",
         "yarn": "^1.22.19"
     },
