--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "cross-env HUSKY_SKIP_INSTALL=true next dev",
-        "build": "cross-env HUSKY_SKIP_INSTALL=true next build",
-        "postbuild": "cross-env next-sitemap --config next-sitemap.config.js",
-        "prod:build": "cross-env HUSKY_SKIP_INSTALL=true yarn codegen && yarn build && yarn postbuild",
-        "start": "cross-env HUSKY_SKIP_INSTALL=true next start",
+        "dev": "next dev",
+        "build": "next build",
+        "postbuild": "next-sitemap --config next-sitemap.config.js",
+        "prod:build": "yarn codegen && yarn build && yarn postbuild",
+        "start": "next start",
         "lint": "next lint && yarn prettier -w && next build",
         "prettier": "prettier --write \"**/*.+(js|jsx|ts|tsx|css|scss|md)\""
     },
@@ -30,7 +30,6 @@
         "axios": "^1.4.0",
         "cross-env": "^7.0.3",
         "dotenv": "^16.3.1",
-        "eslint": "8.42.0",
         "framer-motion": "^10.12.16",
         "husky": "^8.0.3",
         "jsonwebtoken": "^9.0.0",
@@ -52,6 +51,8 @@
         "yarn": "^1.22.19"
     },
     "devDependencies": {
-        "@types/mapbox-gl": "^2.7.11"
+        "@types/mapbox-gl": "^2.7.11",
+        "eslint": "^8.46.0",
+        "eslint-plugin-next": "^0.0.0"
     }
 }
