--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
         "dotenv": "^16.3.1",
         "framer-motion": "^10.12.16",
         "husky": "^8.0.3",
-        "jsonwebtoken": "^9.0.0",
         "lottie-react": "^2.4.0",
         "mapbox-gl": "^2.15.0",
         "mongoose": "^7.2.3",
@@ -51,8 +50,10 @@
         "yarn": "^1.22.19"
     },
     "devDependencies": {
+        "@types/jsonwebtoken": "^9.0.2",
         "@types/mapbox-gl": "^2.7.11",
         "eslint": "^8.46.0",
-        "eslint-plugin-next": "^0.0.0"
+        "eslint-plugin-next": "^0.0.0",
+        "jsonwebtoken": "^9.0.1"
     }
 }
